--- a/backend/orders/requirements.txt
+++ b/backend/orders/requirements.txt
@@ -1,6 +1,7 @@
 flask
 flask-jwt-extended
 flask-cors
-psycopg2-binary
+prometheus_flask_exporter
 pika
-prometheus-flask-exporter
+requests
+psycopg2-binary
