--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,6 @@ http {
 
   upstream frontend {
     server frontend1:80;
-    server frontend2:80;
   }
 
   upstream users_backend {
@@ -56,7 +55,16 @@ http {
       proxy_pass http://products_backend;
       proxy_cache product_cache;
       proxy_cache_valid 200 10s;
+      proxy_cache_key "$scheme$proxy_host$request_uri";
       add_header X-Cache-Status $upstream_cache_status;
     }
+        location /products {
+        return 301 /products/;
+    }
+    location /products/search {
+    proxy_pass http://products_backend;
+    }
+
+
   }
 }
